# sap-copilot

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
abap-adt-mcp/: .gitignore  CLAUDE.md  README.md  discovery.xml  fix_table.py  lessons-learned.md  live_discovery.xml  probe2.py  probe_bdef.py  probe_clas.py  probe_clas_links.py  probe_clas_write.py  probe_clas_write2.py  probe_ct.py  probe_ddls.py  probe_sysinfo.py  pyproject.toml
abap-adt-mcp/src/vsp/: __init__.py  __main__.py  cli.py  config.py  server.py
abap-adt-mcp/src/vsp/adt/: __init__.py  client.py  codeintel.py  cookies.py  crud.py  debugger.py  devtools.py  features.py  http.py  safety.py  websocket.py  workflows.py  xml_types.py
abap-adt-mcp/src/vsp/cache/: __init__.py  cache.py
abap-adt-mcp/src/vsp/dsl/: __init__.py  executor.py  types.py
abap-adt-mcp/src/vsp/handlers/: __init__.py  amdp.py  analysis.py  codeintel.py  crud.py  debug.py  devtools.py  diagnostics.py  git.py  install.py  read.py  report.py  search.py  system.py  transport.py  ui5.py
apps/gateway/: .env.example  pyproject.toml
apps/gateway/gateway/: __init__.py  __main__.py  config.py  mcp_manager.py  orchestrator.py
apps/gateway/gateway/routes/: chat.py  health.py  llm.py  systems.py  workflows.py
apps/gateway/gateway/workflows/: __init__.py  agents.py  checkpoint.py  engine.py  graph_metadata.py  graphs.py  recovery.py  router.py  state.py  tool_filter.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/components/chat/: ChatInput.tsx  ChatPanel.tsx  MessageList.tsx  ToolCallCard.tsx  WorkflowProgress.tsx
apps/web/src/components/context/: CodeViewer.tsx  ContextPanel.tsx  ObjectExplorer.tsx
apps/web/src/components/layout/: ShellLayout.tsx  Sidebar.tsx
apps/web/src/hooks/: useChat.ts  useLLMModels.ts  useWorkflow.ts
apps/web/src/lib/: gateway.ts
apps/web/src/stores/: appStore.ts
apps/web/src/styles/: components.css  global.css  tokens.css
apps/web/src/types/: vendor-shims.d.ts
convex/: llmConfig.ts  messages.ts  schema.ts  sessions.ts  systems.ts  tsconfig.json  workflows.ts
convex-dashboard/: index.html  package.json  vite.config.ts
convex-dashboard/src/: App.tsx  api.ts  index.css
convex-dashboard/src/components/: DocumentsView.tsx  FunctionsView.tsx  JsonViewer.tsx  LogsView.tsx  RunnerView.tsx  Sidebar.tsx  TablesView.tsx
docs/: C_TravelRequest_Technical_Specification.md
(+11 files in other folders)
