[project]
name = "sap-copilot-gateway"
version = "0.1.0"
description = "Python FastAPI gateway bridging the frontend to VSP MCP servers and LiteLLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "openai>=1.50.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "cryptography>=44.0.0",
    "sse-starlette>=2.2.0",
    "mcp>=1.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
